# my-budget-rs

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  LICENSE  README.md  Rocket.toml  build-client.sh  enhancements.md  npm.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
cli/: Cargo.toml
cli/src/: main.rs  structs.rs
client/: README.md  npm.sh  package-lock.json  package.json  vue.config.js
client/public/: .htaccess  index.html
client/src/: App.vue  main.js  router.js
migrations/202409091120_init_item_table/: up.sql
migrations/202409161547_init_settings_table/: up.sql
migrations/202503300001_init_currency_table/: down.sql  up.sql
nextgen-client/: .eslintrc.js  .gitignore  package-lock.json  package.json
nextgen-client/public/: index.html
nextgen-client/src/: App.js  config.js
src/: api.rs  bank.rs  cardbalance.rs  cardheld.rs  cash.rs  debt.rs  debtto.rs  filestore.rs  helper.rs  main.rs  misccredit.rs  miscdebit.rs  regularcredit.rs  regularpayment.rs  schemaz.rs  store.rs  structs.rs  tests.rs  uncleared.rs
src/controllers/: api.rs  bank.rs  cardbalance.rs  cardheld.rs  cash.rs  currency.rs  debt.rs  debtto.rs  generate_controller.rs  logs.rs  misccredit.rs  miscdebit.rs  mod.rs  regularcredit.rs  regularpayment.rs  settings.rs  uncleared.rs
src/models/: currency.rs  item.rs  mod.rs  settings.rs
src/services/: apiservice.rs  currencystore.rs  itemstore.rs  logstore.rs  mod.rs  settingsstore.rs
wwwroot/: dashboard.css  index.html
wwwroot/css/: bank~cardbalance~cardheld~cash~debt~misccredit~miscdebit~owedto~regularcredit~regularpayment~uncleared.c13e1c71.css  chunk-vendors.06b93023.css
wwwroot/js/: app.430c95f4.js  app.430c95f4.js.map  app.d65c2ef6.js  app.d65c2ef6.js.map  app.f69fc297.js  app.f69fc297.js.map  bank.2081b0e8.js  bank.2081b0e8.js.map  bank.72d72613.js  bank.72d72613.js.map  bank~cardbalance~cardheld~cash~debt~misccredit~miscdebit~owedto~regularcredit~regularpayment~uncleared.4d100e4c.js  bank~cardbalance~cardheld~cash~debt~misccredit~miscdebit~owedto~regularcredit~regularpayment~uncleared.4d100e4c.js.map  bank~cardbalance~cardheld~cash~debt~misccredit~miscdebit~owedto~regularcredit~regularpayment~uncleared.ec55c2fc.js  bank~cardbalance~cardheld~cash~debt~misccredit~miscdebit~owedto~regularcredit~regularpayment~uncleared.ec55c2fc.js.map  cardbalance.b4ba6d5c.js  (+49 more)
(+42 files in other folders)
