[package]
name = "my-budget"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rand = "0.8"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
chrono = "0.4.38"
rust_decimal = "1.*"
rust_decimal_macros = "1.*"
lazy_static = "1.5.0"
diesel = { version = "2.2.*", features = ["returning_clauses_for_sqlite_3_35", "numeric"] }
diesel_migrations = "2.2.*"
diesel-derive-enum = "2.1.*"

[dependencies.rocket]
version = "0.5.*"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.*"
features = ["diesel_sqlite_pool", "sqlite_pool"]