[package]
name = "my-budget"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json =  "*"
chrono = "*"
rust_decimal = "*"
rust_decimal_macros = "*"
#lazy_static = "*"
diesel = { version = "*", features = [
    "returning_clauses_for_sqlite_3_35",
    "numeric",
] }
diesel_migrations = "*"
diesel-derive-enum = "*"

[dependencies.rocket]
version = "*"
features = ["json"]

[dependencies.rocket_cors]
version = "*"

[dependencies.rocket_sync_db_pools]
version = "*"
features = ["diesel_sqlite_pool", "sqlite_pool"]
