[package]
name = "my-budget"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
rust_decimal = "*"
rust_decimal_macros = "*"
diesel = { version = "*", features = [
    "returning_clauses_for_sqlite_3_35",
    "numeric",
] }
diesel_migrations = "*"
diesel-derive-enum = "*"
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
deadpool-diesel = { version = "0.6", features = ["sqlite"] }
